--- a/style.css
+++ b/style.css
@@ -1,7 +1,42 @@
 /* Hintergrundfarbe der gesamten Seite auf #323232 setzen */
 body {
     background-color: #323232;
-    font-family: 'Open Sans', sans-serif; /* Schriftart auf Open Sans setzen */
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    color: white;
+}
+.contentContainer{
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.restartButton {
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.6);
+  color: white;
+  background-color: rgba(128, 128, 128, 0.552);
+}
+
+.restartButton:hover {
+  background-color: rgba(128, 128, 128, 0.7);
+  cursor: pointer;
+
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: 50px;
 }
 
 /* Die Tabelle soll eine weiße Border-Farbe haben */
@@ -12,11 +47,19 @@ table {
 
 /* Stil für Zellen (td und th) innerhalb der Tabelle */
 th, td {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     text-align: center;
     font-size: 24px;
     padding: 10px; /* Innenabstand hinzufügen, um den Text von den Trennlinien zu trennen */
+}
+
+td {
+  cursor: pointer;
+}
+
+td:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 table {
@@ -37,4 +80,10 @@ table {
   table tr td:last-child {
     border-right: 0;
   }
+
+  .winning-line {
+    position: absolute;
+    height: 5px;
+    background-color: white;
+}
 
