--- a/style.css
+++ b/style.css
@@ -87,3 +87,21 @@ table {
     background-color: white;
 }
 
+@media (max-width: 320px) {
+  .contentContainer {
+    display: flex;
+    justify-content: flex-start;
+    gap: 50px;
+  }
+
+  table{
+    margin: 24px;
+  }
+
+  .restartButton {
+    top: 90vh;
+    left: 50%;
+    transform: translate(-50%, -100%);
+  }
+}
+
