--- a/style.css
+++ b/style.css
@@ -87,21 +87,22 @@ table {
     background-color: white;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 600px) {
   .contentContainer {
     display: flex;
     justify-content: flex-start;
     gap: 50px;
   }
 
-  table{
-    margin: 24px;
+  th,td {
+    width: 80px;
+    height: 80px;
   }
 
   .restartButton {
-    top: 90vh;
+    top: 60vh;
     left: 50%;
-    transform: translate(-50%, -100%);
+    transform: translate(-50%, 0);
   }
 }
 
